--- a/thesis/example.bib
+++ b/thesis/example.bib
@@ -238,7 +238,24 @@ series = {FOCS ’09}
 }
   
 
+  @inproceedings{10.1145/1007352.1007372,
+author = {Spielman, Daniel A. and Teng, Shang-Hua},
+title = {Nearly-Linear Time Algorithms for Graph Partitioning, Graph Sparsification, and Solving Linear Systems},
+year = {2004},
+isbn = {1581138520},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/1007352.1007372},
+doi = {10.1145/1007352.1007372},
+booktitle = {Proceedings of the Thirty-Sixth Annual ACM Symposium on Theory of Computing},
+pages = {81–90},
+numpages = {10},
+keywords = {graph sparsification, preconditioners, graph partitioning},
+location = {Chicago, IL, USA},
+series = {STOC ’04}
+}
   
+
 
 
 
