--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -1,41 +1,41 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 % Masters/Doctoral Thesis 
 % LaTeX Template
 % Version 2.5 (27/8/17)
-%
+% 
 % This template was downloaded from:
 % http://www.LaTeXTemplates.com
-%
+% 
 % Version 2.x major modifications by:
 % Vel (vel@latextemplates.com)
-%
+% 
 % This template is based on a template by:
 % Steve Gunn (http://users.ecs.soton.ac.uk/srg/softwaretools/document/templates/)
 % Sunil Patel (http://www.sunilpatel.co.uk/thesis-template/)
-%
+% 
 % Template license:
 % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 \documentclass[
 11pt, % The default document font size, options: 10pt, 11pt, 12pt
-%oneside, % Two side (alternating margins) for binding by default, uncomment to switch to one side
+% oneside, % Two side (alternating margins) for binding by default, uncomment to switch to one side
 english, % ngerman for German
 singlespacing, % Single line spacing, alternatives: onehalfspacing or doublespacing
-%draft, % Uncomment to enable draft mode (no pictures, no links, overfull hboxes indicated)
-%nolistspacing, % If the document is onehalfspacing or doublespacing, uncomment this to set spacing in lists to single
+% draft, % Uncomment to enable draft mode (no pictures, no links, overfull hboxes indicated)
+% nolistspacing, % If the document is onehalfspacing or doublespacing, uncomment this to set spacing in lists to single
 liststotoc, % Uncomment to add the list of figures/tables/etc to the table of contents
 toctotoc, % Uncomment to add the main table of contents to the table of contents
-%parskip, % Uncomment to add space between paragraphs
-%nohyperref, % Uncomment to not load the hyperref package
+% parskip, % Uncomment to add space between paragraphs
+% nohyperref, % Uncomment to not load the hyperref package
 headsepline, % Uncomment to get a line under the header
 chapterinoneline, % Uncomment to place the chapter title next to the number on one line
-%consistentlayout, % Uncomment to change the layout of the declaration, abstract and acknowledgements pages to match the default layout
+% consistentlayout, % Uncomment to change the layout of the declaration, abstract and acknowledgements pages to match the default layout
 ]{MastersDoctoralThesis} % The class file specifying the document structure
 
 \usepackage[utf8]{inputenc} % Required for inputting international characters
@@ -44,7 +44,7 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 \usepackage{lmodern} % Use the Palatino font by default
 % ACM-Reference-Format
 % https://stackoverflow.com/questions/48411689/error-when-using-biblatex-with-acm-reference-format
-\usepackage[backend=bibtex,style=ACM-Reference-Format,natbib=true]{biblatex} % Use the bibtex backend with the authoryear citation style (which resembles APA)
+\usepackage[backend=bibtex, style=numeric,citestyle=numeric, natbib=true]{biblatex} % Use the bibtex backend with the authoryear citation style (which resembles APA)
 
 \usepackage[linesnumbered,lined,boxed]{algorithm2e}
 % \usepackage{algpseudocode}
@@ -92,23 +92,23 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 \newtheorem{Bf}{Fact}
 % \newtheorem{HXcl}{Claim}
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 %	MARGIN SETTINGS
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 \geometry{
-	paper=a4paper, % Change to letterpaper for US letter
-	inner=2.5cm, % Inner margin
-	outer=3.8cm, % Outer margin
-	bindingoffset=.5cm, % Binding offset
-	top=1.5cm, % Top margin
-	bottom=1.5cm, % Bottom margin
-	%showframe, % Uncomment to show how the type block is set on the page
+  paper=a4paper, % Change to letterpaper for US letter
+  inner=2.5cm, % Inner margin
+  outer=3.8cm, % Outer margin
+  bindingoffset=.5cm, % Binding offset
+  top=1.5cm, % Top margin
+  bottom=1.5cm, % Bottom margin
+  % showframe, % Uncomment to show how the type block is set on the page
 }
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 %	THESIS INFORMATION
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 \thesistitle{Random Spanning Trees} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
 \supervisor{Dr. Samir \textsc{Datta}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
@@ -125,9 +125,9 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 \faculty{\href{https://www.cmi.ac.in/~sdatta/}{Samir Datta}} % Your faculty's name and URL, this is used in the title page and abstract, print it elsewhere with \facname
 
 \AtBeginDocument{
-\hypersetup{pdftitle=\ttitle} % Set the PDF's title to your title
-\hypersetup{pdfauthor=\authorname} % Set the PDF's author to your name
-\hypersetup{pdfkeywords=\keywordnames} % Set the PDF's keywords to your keywords
+  \hypersetup{pdftitle=\ttitle} % Set the PDF's title to your title
+  \hypersetup{pdfauthor=\authorname} % Set the PDF's author to your name
+  \hypersetup{pdfkeywords=\keywordnames} % Set the PDF's keywords to your keywords
 }
 
 \begin{document}
@@ -136,103 +136,103 @@ chapterinoneline, % Uncomment to place the chapter title next to the number on o
 
 \pagestyle{plain} % Default to the plain heading style until the thesis style is called for the body content
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 %	TITLE PAGE
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 \begin{titlepage}
-\begin{center}
+  \begin{center}
 
-\vspace*{.06\textheight}
-{\scshape\LARGE \univname\par}\vspace{1.5cm} % University name
-\textsc{\Large Masters Thesis}\\[0.5cm] % Thesis type
+    \vspace*{.06\textheight}
+    {\scshape\LARGE \univname\par}\vspace{1.5cm} % University name
+    \textsc{\Large Masters Thesis}\\[0.5cm] % Thesis type
 
-\HRule \\[0.4cm] % Horizontal line
-{\huge \bfseries \ttitle\par}\vspace{0.4cm} % Thesis title
-\HRule \\[1.5cm] % Horizontal line
- 
-\begin{minipage}[t]{0.4\textwidth}
-\begin{flushleft} \large
-\emph{Author:}\\
-\href{http://www.johnsmith.com}{\authorname} % Author name - remove the \href bracket to remove the link
-\end{flushleft}
-\end{minipage}
-\begin{minipage}[t]{0.4\textwidth}
-\begin{flushright} \large
-\emph{Supervisor:} \\
-\href{http://www.jamessmith.com}{\supname} % Supervisor name - remove the \href bracket to remove the link  
-\end{flushright}
-\end{minipage}\\[3cm]
- 
-\vfill
+    \HRule \\[0.4cm] % Horizontal line
+    {\huge \bfseries \ttitle\par}\vspace{0.4cm} % Thesis title
+    \HRule \\[1.5cm] % Horizontal line
+    
+    \begin{minipage}[t]{0.4\textwidth}
+      \begin{flushleft} \large
+        \emph{Author:}\\
+        \href{http://www.johnsmith.com}{\authorname} % Author name - remove the \href bracket to remove the link
+      \end{flushleft}
+    \end{minipage}
+    \begin{minipage}[t]{0.4\textwidth}
+      \begin{flushright} \large
+        \emph{Supervisor:} \\
+        \href{http://www.jamessmith.com}{\supname} % Supervisor name - remove the \href bracket to remove the link  
+      \end{flushright}
+    \end{minipage}\\[3cm]
+    
+    \vfill
 
-\large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
-\textit{in the}\\[0.4cm]
-\deptname\\[2cm] % Research group name and department name
- 
-\vfill
+    \large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
+    \textit{in the}\\[0.4cm]
+    \deptname\\[2cm] % Research group name and department name
+    
+    \vfill
 
-{\large \today}\\[4cm] % Date
-%\includegraphics{Logo} % University/department logo - uncomment to place it
- 
-\vfill
-\end{center}
+    {\large \today}\\[4cm] % Date
+    % \includegraphics{Logo} % University/department logo - uncomment to place it
+    
+    \vfill
+  \end{center}
 \end{titlepage}
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 %	DECLARATION PAGE
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 \begin{declaration}
-\addchaptertocentry{\authorshipname} % Add the declaration to the table of contents
-\noindent I, \authorname, declare that this thesis titled, \enquote{\ttitle} and the work presented in it are my own. I confirm that:
+  \addchaptertocentry{\authorshipname} % Add the declaration to the table of contents
+  \noindent I, \authorname, declare that this thesis titled, \enquote{\ttitle} and the work presented in it are my own. I confirm that:
 
-\begin{itemize} 
-\item This work was done wholly or mainly while in candidature for a research degree at this University. 
-\item Where any part of this thesis has previously been submitted for a degree or any other qualification at this University or any other institution, this has been clearly stated.
-\item Where I have consulted the published work of others, this is always clearly attributed.
-\item Where I have quoted from the work of others, the source is always given. With the exception of such quotations, this thesis is entirely my own work.
-\item I have acknowledged all main sources of help.
-\item Where the thesis is based on work done by myself jointly with others, I have made clear exactly what was done by others and what I have contributed myself .
+  \begin{itemize} 
+  \item This work was done wholly or mainly while in candidature for a research degree at this University. 
+  \item Where any part of this thesis has previously been submitted for a degree or any other qualification at this University or any other institution, this has been clearly stated.
+  \item Where I have consulted the published work of others, this is always clearly attributed.
+  \item Where I have quoted from the work of others, the source is always given. With the exception of such quotations, this thesis is entirely my own work.
+  \item I have acknowledged all main sources of help.
+  \item Where the thesis is based on work done by myself jointly with others, I have made clear exactly what was done by others and what I have contributed myself .
 
-\end{itemize}
+  \end{itemize}
 
 
- 
-\noindent Signed:\\
-\rule[0.5em]{25em}{0.5pt} % This prints a line for the signature
- 
-\noindent Date:\\
-\rule[0.5em]{25em}{0.5pt} % This prints a line to write the date
+  
+  \noindent Signed:\\
+  \rule[0.5em]{25em}{0.5pt} % This prints a line for the signature
+  
+  \noindent Date:\\
+  \rule[0.5em]{25em}{0.5pt} % This prints a line to write the date
 \end{declaration}
 
 
 % 
 % \cleardoublepage
 % 
-% %----------------------------------------------------------------------------------------
+% % ----------------------------------------------------------------------------------------
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 %	ABSTRACT PAGE
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 \begin{abstract}
-\addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-We study the problem of sampling a spanning tree of a graph with uniform probability. We survey some of the existing algorithms in the literature and explain a recent paper \citet{harvey2016generating} in detail.  Our initial motivation was to study the dynamic complexity of uniformly sampling spanning trees.
+  \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
+  We study the problem of sampling a spanning tree of a graph with uniform probability. We survey some of the existing algorithms in the literature and explain a recent paper \citet{harvey2016generating} in detail.  Our initial motivation was to study the dynamic complexity of uniformly sampling spanning trees.
 \end{abstract}
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 %	ACKNOWLEDGEMENTS
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 \begin{acknowledgements}
-\addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
-I would like to thank my advisor Prof. Samir Datta for his patience and guidance in advicing me . I would also like to thank my family members and friends without whose support this would have not been possible. I would also like to thank Kishlaya for the disscussions on random walks and spectral graph theory. 
+  \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
+  I would like to thank my advisor Prof. Samir Datta for his patience and guidance in advicing me . I would also like to thank my family members and friends without whose support this would have not been possible. I would also like to thank Kishlaya for the disscussions on random walks and spectral graph theory. 
 \end{acknowledgements}
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 %	LIST OF CONTENTS/FIGURES/TABLES PAGES
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 \tableofcontents % Prints the main table of contents
 
@@ -240,55 +240,55 @@ I would like to thank my advisor Prof. Samir Datta for his patience and guidance
 
 % \listoftables % Prints the list of tables
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 %	ABBREVIATIONS
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 % 
 % \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
-% 
-% \textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere\\
-% \textbf{WSF} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or\\
-% 
+%   
+%   \textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere\\
+%   \textbf{WSF} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or\\
+%   
 % \end{abbreviations}
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 %	PHYSICAL CONSTANTS/OTHER DEFINITIONS
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 % 
 % \begin{constants}{lr@{${}={}$}l} % The list of physical constants is a three column table
-% 
-% % The \SI{}{} command is provided by the siunitx package, see its documentation for instructions on how to use it
-% 
-% Speed of Light & $c_{0}$ & \SI{2.99792458e8}{\meter\per\second} (exact)\\
-% %Constant Name & $Symbol$ & $Constant Value$ with units\\
-% 
+%   
+% %   The \SI{}{} command is provided by the siunitx package, see its documentation for instructions on how to use it
+%   
+%   Speed of Light & $c_{0}$ & \SI{2.99792458e8}{\meter\per\second} (exact)\\
+% %   Constant Name & $Symbol$ & $Constant Value$ with units\\
+%   
 % \end{constants}
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 %	SYMBOLS
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 % \begin{symbols}{lll} % Include a list of Symbols (a three column table)
-% 
-% $a$ & distance & \si{\meter} \\
-% $P$ & power & \si{\watt} (\si{\joule\per\second}) \\
-% %Symbol & Name & Unit \\
-% 
-% \addlinespace % Gap to separate the Roman symbols from the Greek
-% 
-% $\omega$ & angular frequency & \si{\radian} \\
-% 
+%   
+%   $a$ & distance & \si{\meter} \\
+%   $P$ & power & \si{\watt} (\si{\joule\per\second}) \\
+% %   Symbol & Name & Unit \\
+%   
+%   \addlinespace % Gap to separate the Roman symbols from the Greek
+%   
+%   $\omega$ & angular frequency & \si{\radian} \\
+%   
 % \end{symbols}
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 %	DEDICATION
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 % \dedicatory{For/Dedicated to/To my\ldots} 
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 \mainmatter % Begin numeric (1,2,3...) page numbering
 
@@ -305,9 +305,9 @@ I would like to thank my advisor Prof. Samir Datta for his patience and guidance
 \input{Chapters/Chapter6.tex}
 
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 % \appendix % Cue to tell LaTeX that the following "chapters" are Appendices
 
@@ -316,15 +316,15 @@ I would like to thank my advisor Prof. Samir Datta for his patience and guidance
 
 
 % \input{Appendices/AppendixA.tex}
-%\include{Appendices/AppendixB}
-%\include{Appendices/AppendixC}
+% \include{Appendices/AppendixB}
+% \include{Appendices/AppendixC}
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 \printbibliography[heading=bibintoc]
 
-%----------------------------------------------------------------------------------------
+% ----------------------------------------------------------------------------------------
 
 \end{document}  
